--- a/StatTrack/Controller/style.css
+++ b/StatTrack/Controller/style.css
@@ -2,7 +2,7 @@
 
 /* index page */
 body {	
-	background-image:url("images/stadium.jpg");
+	background-image:url("../images/stadium.jpg");
 	background-color:black;
 	background-repeat:no-repeat;
 	background-position:center;
